# DescriptiveEval

./: .env.example  .gitignore  README.md  TODO.md  app.py  database.py  evaluation.py  evaluation_api.py  json2md.py  model.py  models.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
app/api/evaluation/: evaluation.py  models.py  router.py  service.py
app/api/evaluation/utils/: db_api.py  evaluation_job.py  lock.py
app/api/evaluation/utils/evaltools/: code_eval.py  evaluator.py  static_eval.py
app/api/misc/: models.py  router.py  service.py  utils.py
app/api/provider/: models.py  provider.py  router.py  service.py
app/api/scoring/: models.py  router.py  scoring.py  service.py  templates.py
app/api/workers/: router.py  service.py
app/config/: constants.py  enums.py
app/core/: auth.py  dependencies.py  enums.py  exceptions.py  lifespan.py  logger.py
app/database/: database_monitoring.py  mongo.py  postgres.py  redis.py
app/utils/: misc.py  wakeup_workers.py  worker.py
static/: index.html  script.js  style.css
tests/: conftest.py  fixtures.py  test_api.py  test_evaluation.py  test_lock.py  test_model.py  test_worker_lifecycle.py
utils/: code_eval.py  database.py  database_monitoring.py  db_api.py  errors.py  json2md.py  logger.py  misc.py  quiz_report.py  schema_utils.py  static_eval.py  templates.py
utils/evaluation/: code_eval.py  evaluator.py  static_eval.py  templates.py
utils/quiz/: evaluation_logger.py  quiz_report.py
utils/redisQueue/: job.py  lock.py  wakeup_workers.py  worker.py
(+3 files in other folders)
